# src/router.php
@@ -81,6 +81,8 @@ $app->group('', function (RouteCollectorProxy $group): void {
         $group->put("/{id:[0-9]+}/pecas", [App\OrdemServico\Controller\EditarItensOrdemServicoController::class, "atualizarPecas"]);
         $group->post("/{id:[0-9]+}/servicos", [App\OrdemServico\Controller\EditarItensOrdemServicoController::class, "adicionarServicos"]);
         $group->put("/{id:[0-9]+}/servicos", [App\OrdemServico\Controller\EditarItensOrdemServicoController::class, "atualizarServicos"]);
+
+        $group->get("/relatorios/media_tempo_servicos", [App\OrdemServico\Controller\RelatoriosOrdemServicoController::class, "relatorioMediaTempoServicos"]);
     });
 
     $group->group('/estoque', function (RouteCollectorProxy $g): void {
